# selector_sim

./: Cargo.toml  README.md  build-win.sh
.github/workflows/: ci.yml
src/: main.rs  scoreboard.rs  selector.rs  world.rs
