[package]
name = "mc_world"
version = "0.1.0"
authors = ["destruc7i0n <destruc7i0n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-leveldb =  { path = "../leveldb-rs" }
hematite-nbt = { git = "https://github.com/ocecaco/hematite_nbt-1", branch = "little-endian" }
serde = { version = "1.0", features = ["derive"] }
libflate = "1"
libc = "0.2.4"
regex = "1"
app_dirs = "^1.2.1"
